<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="5dp"
        android:src="@drawable/baseline_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set_on"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/set_on_wallpaper"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_24"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/cancelButton"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/setOnHomeScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/home_screen"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <TextView
            android:id="@+id/setOnLockScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/lock_screen"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/setOnHomeAndLockScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/home_and_lock_screens"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>