<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_to_ringtones"
        android:contentDescription="@string/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/black"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/ringtone_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/wall_cover" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ringtoneTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/ringtoneAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:text="author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringtoneTitleTextView"
        />

    <ProgressBar
        android:id="@+id/completion_line"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_marginTop="60dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringtoneAuthorTextView"/>

            <TextView
                android:id="@+id/ringtone_play_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="310dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/completion_line"/>

    <TextView
        android:id="@+id/full_duration_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="313dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completion_line"/>

    <ImageButton
        android:id="@+id/previous_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:tint="@color/black"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray"
        android:contentDescription="@string/previous"
        android:padding="7dp"
        android:layout_marginVertical="30dp"
        android:layout_marginEnd="170dp"
        android:src="@drawable/baseline_skip_previous_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completion_line"
        />

    <ImageButton
        android:id="@+id/play_pause_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:tint="@color/black"
        android:padding="7dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/previous"
        android:layout_marginVertical="30dp"
        android:src="@drawable/baseline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completion_line"
        />

    <ImageButton
        android:id="@+id/next_ringtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:tint="@color/black"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray"
        android:padding="7dp"
        android:contentDescription="@string/previous"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="170dp"
        android:src="@drawable/baseline_skip_next_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completion_line"
        />

    <Button
        android:id="@+id/apply__ringtone_on"
        android:layout_width="350dp"
        android:layout_height="43dp"
        android:layout_marginTop="190dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:background="@color/button"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completion_line"/>

</androidx.constraintlayout.widget.ConstraintLayout>
